# TID_analyzer

./: .gitignore  GitHub.lnk  README.md  developer_reset_cache_windows.ps1  pyproject.toml  run_windows.ps1  setup_windows.ps1
assets/world/: EUREF Permanent GNSS Network.csv
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.tsx  styles.css
frontend/tests/: dtec-range-and-solar-contours.test.mjs  geographic-layer-alignment.test.mjs  interpolation-controls.test.mjs  map-explorer-interaction-layout.test.mjs  map-export-regression.test.mjs  map-marker-semantics.test.mjs  responsive-sidebar-visibility.test.mjs  solar-twilight-rendering.test.mjs  visibility-arc-workflow.test.mjs
tests/: test_interpolation_orchestrator.py  test_interpolation_storage.py  test_natural_neighbor.py  test_parser.py  test_solar.py
tests/fixtures/: GWWL_2024_246.txt  LAMA_2024_246.txt
tid_analyzer/: analysis_sets.py  cli.py  config.py  solar.py
tid_analyzer/api/: app.py  state.py
tid_analyzer/assets/world/: TM_WORLD_BORDERS-0.3.geojson
tid_analyzer/importer/: cache.py  parser.py  verification.py
tid_analyzer/interpolation/: benchmark.py  natural_neighbor.py  orchestrator.py  storage.py
tid_analyzer/stations/: catalog.py
