[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tid-analyzer"
version = "0.1.0"
description = "Local GNSS TID analysis web application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
tid-analyzer = "tid_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tid_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
