[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tid-analyzer"
version = "0.1.0"
description = "Local GNSS TID analysis web application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "duckdb>=1.0",
  "numpy>=1.26",
  "PyWavelets>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
tid-analyzer = "tid_analyzer.cli:main"

[tool.hatch.build]
include = ["tid_analyzer/assets/world/*.geojson", "assets/world/*.csv"]

[tool.hatch.build.targets.wheel]
packages = ["tid_analyzer"]
artifacts = ["tid_analyzer/assets/world/*.geojson", "assets/world/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
